Chapter18/kubernetes/services/base/istio/product-composite-virtual-service2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-composite-vs
  namespace: hands-on
spec:
  hosts:
    - 'minikube.me'
  gateways:
  - hands-on-gw
  http:
  - match:
    - uri:
        prefix: "/product-composite"
    route:
    - destination:
        port:
          number: 80
        host: product-composite
